--- a/bai1/index.html
+++ b/bai1/index.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>222</h1>
+    <header>
+        <div class="top">
+            <div class="container">
+                <div class="header-top">
+                    <p>FPT <span>UNIVERCITY</span> </p>
+                    <ul>
+                        <li> <a href="">Trang chủ</a></li>
+                        <li> <a href="">Giới thiệu</a></li>
+                        <li> <a href="">Khóa Học</a></li>
+                        <li> <a href="">Blog</a></li>
+                        <li> <a href="">Liên Hệ</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="bg-imager">
+
+        </div>
+        <div class="header-text">
+            <h1>Trường Đại Học Hàng Đầu Việt Nam</h1>
+            <p>Hãy Đến với chúng tôi </p>
+            <button id="dangky">Đăng ký</button>
+        </div>
+    </header>
+    
+
+
+
+
 </body>
+
+
+
+
+
+<script src="style.js"></script>
 </html>
